# star-catalog-rs

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASES.md  names.json
src/: catalog.rs  cmdline.rs  error.rs  hipparcos.rs  iau.rs  lib.rs  main.rs  star.rs  star_filter.rs  subcube.rs
src/constellations/: mod.rs
src/hipparcos/: hipp_bright.pst  mod.rs
src/image/: image_view.rs  mod.rs
tests/: hipparcos.rs  iau.rs  map.rs  search.rs  subcube.rs
