[package]
name = "star-catalog"
version = "0.0.1"
edition = "2021"
readme = "README.md"
authors = ["Gavin J Stark"]
description = "Star catalog"
homepage = "https://github.com/atthecodeface/star-catalog-rs"
documentation = "https://docs.rs/star-catalog"
keywords = ["astronomy", "star", "catalog"]
categories = ["science"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/star-catalog-rs"

[dependencies]
image = { version = "0.25.2", features = ["png"] }

[dependencies.serde_json]
version = "1.0.125"
features = ["alloc"]

[dependencies.geo-nd]
version = ">=0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.csv]
version = "1.3"
# features = ["derive"]

[dependencies.thiserror]
version = ">=1.0.61"

