[package]
name = "star-catalog"
version = "0.0.6"
edition = "2021"
readme = "README.md"
authors = ["Gavin J Stark"]
description = "Star catalog"
homepage = "https://github.com/atthecodeface/star-catalog-rs"
documentation = "https://docs.rs/star-catalog"
keywords = ["astronomy", "star", "catalog"]
categories = ["science"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/star-catalog-rs"

[features]
default = ["postcard"]
# default = ["postcard", "image", "hipp_bright"]
image = ["dep:image"]
csv = ["dep:csv"]
postcard = ["dep:postcard"]
hipp_bright = ["dep:postcard"]

[dependencies.serde_json]
version = "1.0.125"
features = ["alloc"]

[dependencies.postcard]
version = "1.0"
features = ["alloc"]
optional = true

[dependencies.geo-nd]
version = ">=0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.csv]
version = "1.3"
optional = true

[dependencies.thiserror]
version = ">=1.0.61"

[dependencies.anyhow]
version = ">=1.0.86"

[dependencies.clap]
version = "4.5.2"
features = ["string"]

[dependencies.image]
version = ">=0.25"
default-features = false
features = ["jpeg", "png"]
optional = true

